# Projects

3001_TIP_NEW/TA_BASE/transactive/app/TestCase/TestCaseMCL/cmake/: CMakeLists.txt
3001_TIP_NEW/TA_BASE/transactive/app/TestCase/TestCaseMCL/cmake/src/: CMakeLists.txt
3001_TIP_NEW/TA_BASE/transactive/core/CppSQLiteLib/: core.ocl.TA_CppSQLiteLib.vcxproj  core.ocl.TA_CppSQLiteLib.vcxproj.filters
3001_TIP_NEW/TA_BASE/transactive/core/CppUnit/: CppUnit.vcxproj  CppUnit.vcxproj.filters  Makefile  readme.txt
3001_TIP_NEW/TA_BASE/transactive/core/ZipArchive/: core.zlib.TA_zlib.vcxproj  core.zlib.TA_zlib.vcxproj.filters
3001_TIP_NEW/TA_BASE/transactive/core/database/: core.database.TA_DataAccess.vcxproj  core.database.TA_DataAccess.vcxproj.filters
3001_TIP_NEW/TA_BASE/transactive/core/exceptions/: Makefile  core.exceptions.TA_Exceptions.dsp  core.exceptions.TA_Exceptions.vcproj  core.exceptions.TA_Exceptions.vcxproj  core.exceptions.TA_Exceptions.vcxproj.filters
3001_TIP_NEW/TA_BASE/transactive/core/mcl/: CMakeLists.txt  FindMySQL.cm  Makefile  build_steps.txt  core.ocl.TA_mcl.vcxproj  core.ocl.TA_mcl.vcxproj.filters  solaris_build.sh
3001_TIP_NEW/TA_BASE/transactive/core/ocilib/: CMakeLists.txt  ocilib.vcxproj  ocilib.vcxproj.filters
3001_TIP_NEW/TA_BASE/transactive/core/ocilib/src/: CMakeLists.txt  agent.c  connection.c  dequeue.c  enqueue.c  exception.c  library.c  msg.c  object.c  ocilib_types.h  typeinfo.c
3001_TIP_NEW/TA_BASE/transactive/core/ocl/: core.ocl.TA_ocl.vcxproj  core.ocl.TA_ocl.vcxproj.filters
3001_TIP_NEW/TA_BASE/transactive/core/sockets/: Makefile  core.sockets.TA_Sockets.dsp  core.sockets.TA_Sockets.vcproj  core.sockets.TA_Sockets.vcxproj  core.sockets.TA_Sockets.vcxproj.filters
3001_TIP_NEW/TA_BASE/transactive/core/synchronisation/: Makefile  core.synchronisation.TA_Synchronisation.vcxproj  core.synchronisation.TA_Synchronisation.vcxproj.filters
3001_TIP_NEW/TA_BASE/transactive/core/threads/: Makefile  core.threads.TA_Thread.vcxproj  core.threads.TA_Thread.vcxproj.filters
3001_TIP_NEW/TA_BASE/transactive/core/utilities/: core.utilities.TA_Util.dsp  core.utilities.TA_Util.vcxproj  core.utilities.TA_Util.vcxproj.filters
3001_TIP_NEW/TA_BASE/transactive/core/uuid/: Makefile  core.uuid.TA_Uuid.vcproj  core.uuid.TA_Uuid.vcxproj  core.uuid.TA_Uuid.vcxproj.filters  core.uuid.TA_uuid.dsp
3001_TIP_NEW/TA_BASE/transactive/core/versioning/: Makefile  core.versioning.TA_Version.dsp  core.versioning.TA_Version.vcproj  core.versioning.TA_Version.vcxproj  (+1 more)
PUBLIC/: CMS.rar  Visual_Leak_Detector.rar
PUBLIC/MarketData/include/: BarCalculator.h  MarketData.h  MarketDataAPI.h  MarketDataFeed.h
PUBLIC/MarketData/lib/: MarketData.lib
PUBLIC/MarketData/sample/: sample_code.txt
PUBLIC/SQLite/doc/: sqlite_src.7z
PUBLIC/SQLite/lib/: sqlite3.exp  sqlite3.lib
TOOLS/tools_uml/: down_file_astach.txt
(+961 files in other folders)
